manifests/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: demo-strict-mtls
  namespace: demo
spec:
  mtls:
    mode: STRICT
